--- a/src/main/res/layout/ac_photoblog.xml
+++ b/src/main/res/layout/ac_photoblog.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
-    <com.topface.topface.ui.views.GridViewWithHeaderAndFooter
+    <com.topface.topface.ui.GridViewWithHeaderAndFooter
         android:id="@+id/user_photos_grid"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
