--- a/src/main/res/layout/vip_item_edit_form_switch.xml
+++ b/src/main/res/layout/vip_item_edit_form_switch.xml
@@ -5,7 +5,7 @@
 
     <TextView
         android:tag="tvTitle"
-        style="@style/ItemTitleText"
+        style="@style/GrayText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -14,10 +14,8 @@
         android:layout_gravity="left"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:drawablePadding="5dp"
         android:ellipsize="end"
-        android:singleLine="true"
-        android:textSize="14sp"/>
+        android:singleLine="true"/>
 
     <!-- Switch -->
 
