--- a/src/main/res/layout/fragment_buy_premium.xml
+++ b/src/main/res/layout/fragment_buy_premium.xml
@@ -6,15 +6,16 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/fbpContainer"
-            android:padding="5dp"
-            android:layout_marginRight="5dp">
+            android:paddingTop="12dp">
 
             <TextView
                 android:id="@+id/fbpBuyingDisabled"
@@ -24,6 +25,12 @@
                 android:text="@string/general_buying_disabled"
                 android:visibility="gone"
                 android:layout_margin="5dp"/>
+
+            <TextView
+                style="@style/GrayText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/vip_state_off"/>
 
             <ViewStub
                 android:id="@+id/EditorTestStub"
@@ -37,102 +44,6 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"/>
 
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/vip_privileges"
-                style="@style/TitleWhiteText"
-                android:layout_marginLeft="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="10dp"/>
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/vip_info_guest"
-                android:layout_marginLeft="5dp"
-                style="@style/VipItemTitleWhiteText"
-                android:textSize="13sp"
-                android:drawablePadding="5dp"
-                android:drawableLeft="@drawable/ic_guests"/>
-
-            <ImageView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/delimiter_rocket"/>
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/vip_info_invisible"
-                android:layout_marginLeft="5dp"
-                style="@style/VipItemTitleWhiteText"
-                android:textSize="13sp"
-                android:drawableLeft="@drawable/ic_invisible"
-                android:drawablePadding="5dp"/>
-
-            <ImageView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/delimiter_rocket"/>
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/vip_stop_ads"
-                android:layout_marginLeft="5dp"
-                style="@style/VipItemTitleWhiteText"
-                android:textSize="13sp"
-                android:drawablePadding="5dp"
-                android:drawableLeft="@drawable/ic_stop_ads"/>
-
-            <ImageView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/delimiter_rocket"/>
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/vip_info_message"
-                android:layout_marginLeft="5dp"
-                style="@style/VipItemTitleWhiteText"
-                android:textSize="13sp"
-                android:drawableLeft="@drawable/ic_message"
-                android:drawablePadding="5dp"/>
-
-            <ImageView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/delimiter_rocket"/>
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/vip_info_blackList"
-                android:layout_marginLeft="5dp"
-                style="@style/VipItemTitleWhiteText"
-                android:textSize="13sp"
-                android:drawableLeft="@drawable/ic_blacklist"
-                android:drawablePadding="5dp"/>
-
-            <ImageView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/delimiter_rocket"/>
-
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/vip_info_vip"
-                android:layout_marginLeft="5dp"
-                style="@style/VipItemTitleWhiteText"
-                android:textSize="13sp"
-                android:drawableLeft="@drawable/ic_vip"
-                android:drawablePadding="5dp"/>
-
         </LinearLayout>
 
         <LinearLayout
@@ -142,50 +53,18 @@
             android:layout_height="wrap_content"
             android:paddingBottom="10dp">
 
-            <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp">
-
-                <TextView
-                    android:id="@+id/fepVipRest"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/TitleWhiteText"
-                    android:text="@string/vip_rest"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"/>
-
-                <ImageButton
-                    android:id="@+id/fepVipEdit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_edit"
-                    android:layout_alignParentRight="true"
-                    android:background="@android:color/transparent"/>
-            </RelativeLayout>
-
             <include
                 android:id="@+id/fepInvis"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginBottom="20dp"
                 layout="@layout/vip_item_edit_form_switch"/>
 
             <include
                 android:id="@+id/fepBlackList"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                layout="@layout/vip_item_edit_form_select"/>
-
-            <include
-                android:id="@+id/fepProfileBG"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 layout="@layout/vip_item_edit_form_select"/>
