--- a/src/main/res/layout/fragment_form.xml
+++ b/src/main/res/layout/fragment_form.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:layout_height="fill_parent">
 
     <LinearLayout
         android:id="@+id/loEmptyForm"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:gravity="center_horizontal">
 
         <TextView
             android:id="@+id/tvEmptyForm"
-            style="@style/BackgroundTitleText"
+            style="@style/GrayText"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp"
             android:gravity="center"
             android:text="@string/profile_empty_form" />
 
         <Button
+            style="@style/FlatGrayButton"
             android:id="@+id/btnEmptyForm"
-            style="@style/Widget.Topface.Button.Big.Gray"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="224dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="20dp"
             android:text="@string/profile_ask_form" />
 
         <RelativeLayout
@@ -45,6 +45,7 @@
         </RelativeLayout>
 
         <TextView
+            style="@style/GrayText"
             android:id="@+id/emptyFormSuccess"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -53,9 +54,6 @@
             android:layout_marginTop="26dp"
             android:gravity="center"
             android:text="@string/profile_ask_sent"
-            android:textColor="#B8B8B8"
-            android:textSize="16sp"
-            android:textStyle="bold"
             android:visibility="gone" />
 
     </LinearLayout>
@@ -74,4 +72,4 @@
         android:paddingRight="8dp"
         android:paddingTop="8dp"/>
 
-</LinearLayout>
+</RelativeLayout>
