--- a/src/main/res/layout/item_user_list.xml
+++ b/src/main/res/layout/item_user_list.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/loRoot"
     android:layout_width="fill_parent"
-    android:layout_height="60dp">
+    android:minHeight="60dp"
+    android:layout_height="wrap_content">
 
     <!-- Title -->
     <TextView
