--- a/src/main/res/layout/vip_item_edit_form_select.xml
+++ b/src/main/res/layout/vip_item_edit_form_select.xml
@@ -6,24 +6,14 @@
 
     <TextView
         android:tag="tvTitle"
-        style="@style/ItemTitleText"
+        style="@style/GrayText"
         android:layout_alignParentLeft="true"
         android:gravity="center_vertical"
+        android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:drawablePadding="10dp"
         android:ellipsize="end"
-        android:singleLine="true"
-        android:textSize="14sp"/>
-
-    <ImageView
-        android:id="@+id/ivArrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="15dp"
-        android:src="@drawable/im_item_arrow"/>
+        android:singleLine="true"/>
 </RelativeLayout>
