--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -893,4 +893,20 @@
         <item name="android:textColor">@color/list_unread_counter_background</item>
         <item name="android:textSize">13sp</item>
     </style>
+
+    <style name="FlatGrayButton">
+        <item name="android:background">@drawable/flat_gray_btn</item>
+        <item name="android:textColor">@color/text_white</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="GrayText">
+        <item name="android:textColor">@color/text_color_gray</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="WhiteText">
+        <item name="android:textColor">@color/text_white</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
