--- a/src/main/res/layout/fragment_topface_account.xml
+++ b/src/main/res/layout/fragment_topface_account.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/bg_white">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="8dp">
 
         <RelativeLayout
             android:id="@+id/fieldContainer_layout"
@@ -48,49 +51,28 @@
 
         <Button
             android:id="@+id/btnLogout"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            style="@style/Widget.Topface.Button.Big.Gray"
+            style="@style/WhiteButtonWithSeparator"
             android:text="@string/settings_logout"/>
 
         <Button
             android:id="@+id/btnChange"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:background="@drawable/btn_gray_selector"
             android:text="@string/settings_logout"
-            style="@style/Widget.Topface.Button.Big.Gray"
+            style="@style/WhiteButtonWithSeparator"
+            tools:visibility="visible"
             android:visibility="gone"/>
 
         <Button
             android:id="@+id/btnChangeEmail"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:background="@drawable/btn_gray_selector"
             android:text="@string/change_email"
-            style="@style/Widget.Topface.Button.Big.Gray"
+            style="@style/WhiteButtonWithSeparator"
+            tools:visibility="visible"
             android:visibility="gone"/>
-    </LinearLayout>
 
-    <Button
-        android:id="@+id/btnDeleteAccount"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="12dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        style="@style/Widget.Topface.Button.Big.Gray"
-        android:text="@string/settings_delete_account"/>
+        <Button
+            android:id="@+id/btnDeleteAccount"
+            style="@style/WhiteButtonWithSeparator"
+            android:text="@string/settings_delete_account"/>
+    </LinearLayout>
 
     <com.topface.topface.ui.views.LockerView
         android:id="@+id/llvLogoutLoading"
