--- a/src/main/res/layout/fragment_topface_account.xml
+++ b/src/main/res/layout/fragment_topface_account.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="#ffffff"
     android:orientation="vertical">
 
     <ScrollView
@@ -22,95 +23,102 @@
                 android:id="@+id/fieldContainer_layout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/edit_big_btn_selector"
+                android:layout_marginBottom="18dp"
+                android:layout_marginTop="18dp"
                 android:gravity="center">
 
                 <EditText
                     android:id="@+id/edText"
-                    style="@style/AccountEditText"
+                    style="@style/SettingsAccountEditText"
                     android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/tvText"
-                    style="@style/ItemTitleText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawablePadding="5dp"
                     android:gravity="center"
                     android:padding="4dp"
                     android:singleLine="true"
-                    android:textSize="14sp" />
+                    android:textColor="#333333"
+                    android:textSize="16sp" />
             </RelativeLayout>
 
             <Button
-                android:id="@+id/btnLogout"
-                style="@style/Widget.Topface.Button.Big.Gray"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@string/settings_logout" />
-
-            <Button
                 android:id="@+id/btnChange"
-                style="@style/Widget.Topface.Button.Big.Gray"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@string/settings_logout"
+                android:background="#33b5e5"
+                android:text="@string/change_password"
                 android:visibility="gone" />
 
+            <Button
+                android:id="@+id/btnChangeEmail"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="#9e9e9e"
+                android:text="@string/change_email"
+                android:visibility="visible" />
+
+            <Button
+                android:id="@+id/btnLogout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="#9e9e9e"
+                android:text="@string/settings_logout"
+                android:visibility="visible" />
 
             <EditText
                 android:id="@+id/edCodeConfirmation"
-                style="@style/AccountEditText"
+                style="@style/SettingsAccountEditText"
                 android:layout_marginBottom="16dp"
-                android:layout_marginTop="32dp"
-                android:focusable="true"
+                android:layout_marginTop="19dp"
                 android:hint="@string/settings_code_confirmation_hint"
                 android:visibility="gone" />
 
             <Button
                 android:id="@+id/btnCodeSend"
-                style="@style/Widget.Topface.Button.Big.Gray"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:background="#9e9e9e"
                 android:text="@string/settings_code_confirmation"
                 android:visibility="gone" />
 
             <Button
                 android:id="@+id/btnCodeWasSend"
-                style="@style/Widget.Topface.Button.Big.Gray"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:background="#9e9e9e"
                 android:text="@string/settings_email_was_confirmed"
                 android:visibility="gone" />
 
-            <Button
-                android:id="@+id/btnChangeEmail"
-                style="@style/Widget.Topface.Button.Big.Gray"
+            <TextView
+                android:id="@+id/txtCodeWasSend"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/btn_gray_selector"
-                android:text="@string/change_email"
+                android:gravity="center"
+                android:paddingTop="6dp"
+                android:text="@string/settings_email_was_confirmed_textview_text"
+                android:textColor="#959595"
+                android:textSize="12sp"
                 android:visibility="gone" />
+
         </LinearLayout>
     </ScrollView>
 
-    <Button
+    <TextView
         android:id="@+id/btnDeleteAccount"
-        style="@style/Widget.Topface.Button.Big.Gray"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/settings_delete_account" />
+        android:gravity="center"
+        android:paddingBottom="10dp"
+        android:paddingTop="8dp"
+        android:text="@string/settings_delete_account"
+        android:textColor="#E6333333"
+        android:textSize="16sp" />
 
     <com.topface.topface.ui.views.LockerView
         android:id="@+id/llvLogoutLoading"
