--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -900,4 +900,18 @@
         <item name="android:background">@color/edit_form_selector_background_color_release_state
         </item>
     </style>
+
+    <style name="SettingsAccountEditText">
+        <item name="android:paddingLeft">6dp</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/edittext_holo_selector</item>
+        <item name="android:focusable">true</item>
+        <item name="android:focusableInTouchMode">true</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textColor">#333333</item>
+        <item name="android:textColorHint">#8A8A8A</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">left</item>
+    </style>
 </resources>
