--- a/src/main/res/layout/fragment_change_auth_data.xml
+++ b/src/main/res/layout/fragment_change_auth_data.xml
@@ -1,73 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/main_background_color">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="18dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp">
 
         <TextView
             android:id="@+id/setPasswordText"
-            android:layout_marginTop="10dp"
-            android:textSize="16sp"
-            android:layout_marginLeft="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/general_set_password"
-            android:visibility="gone"/>
+            android:textSize="16sp"
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/edMainField"
-            style="@style/ItemWhiteText"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:gravity="left|center_vertical"
-            android:background="@drawable/city_editbox_selector"
-            android:singleLine="true"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:textColorHint="#5F5F5F"/>
+            style="@style/SettingsAccountEditText"
+            android:layout_marginBottom="18dp"
+            android:gravity="left|center_vertical" />
 
         <EditText
             android:id="@+id/edConfirmationField"
-            style="@style/ItemWhiteText"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:gravity="left|center_vertical"
-            android:background="@drawable/city_editbox_selector"
-            android:singleLine="true"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:textColorHint="#5F5F5F"
-            android:inputType="textPassword"/>
+            style="@style/SettingsAccountEditText"
+            android:layout_marginBottom="18dp"
+            android:gravity="left|center_vertical" />
 
         <Button
             android:id="@+id/btnSave"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:background="@drawable/btn_light_gray_selector"
-            android:text="@string/save"
-            style="@style/ButtonGrayText"/>
+            android:background="#9e9e9e"
+            android:text="@string/save" />
     </LinearLayout>
 
     <com.topface.topface.ui.views.LockerView
         android:id="@+id/llvLogoutLoading"
         style="@style/LoadingLocker"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 </RelativeLayout>
