--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -67,5 +67,8 @@
     <!--filter fragment dividers color-->
     <color name="filter_fragment_divider_color">#E2E2E2</color>
 
+    <!--light design background color-->
+    <color name="main_background_color">#FFFFFF</color>
+
 
 </resources>
