--- a/src/main/res/layout/filter_edit_form_dialog_cell.xml
+++ b/src/main/res/layout/filter_edit_form_dialog_cell.xml
@@ -7,4 +7,4 @@
     android:paddingLeft="16dp"
     android:paddingTop="16dp"
     android:textColor="@drawable/filter_light_edit_form_dialog_text_color_selector"
-    android:textSize="16dp" />
+    android:textSize="16sp" />
