--- a/src/main/res/layout/layout_locker_view.xml
+++ b/src/main/res/layout/layout_locker_view.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                style="@style/LoadingLocker">
+    style="@style/LoadingLocker">
 
-    <LinearLayout
+    <ProgressBar
+        android:id="@+id/prsLocker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:orientation="horizontal">
+        android:layout_gravity="center" />
 
-        <ProgressBar
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/text"
+        style="@style/LoadingLockerText"
+        android:layout_alignTop="@id/prsLocker"
+        android:layout_toRightOf="@id/prsLocker" />
 
-        <TextView
-            android:id="@+id/text"
-            style="@style/LoadingLockerText"/>
-    </LinearLayout>
 </RelativeLayout>
