--- a/src/main/res/layout/layout_retryview.xml
+++ b/src/main/res/layout/layout_retryview.xml
@@ -7,13 +7,21 @@
     android:gravity="center"
     android:clickable="true">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_error" />
+
     <TextView
         android:id="@+id/tvMessage"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:textSize="16sp"
-        android:textColor="#B8B8B8"
+        android:layout_marginTop="44dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="15dp"
+        android:textSize="18sp"
+        android:textColor="#333333"
         android:gravity="center" />
 
     <LinearLayout
