--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -724,7 +724,7 @@
 
     // наследуются стили Widget
 
-    <style name="Widget.Topface"/>
+    <style name="Widget.Topface" />
 
     <style name="Widget.Topface.Button.Big.Gray" parent="Widget.Topface.Button.Big">
         <item name="android:background">@drawable/btn_gray_selector</item>
@@ -892,6 +892,18 @@
     <style name="OverflowDropDownMenu" parent="Widget.AppCompat.PopupMenu.Overflow">
         <item name="overlapAnchor">false</item>
         <item name="android:overlapAnchor">false</item>
+    </style>
+
+    <style name="FlatGrayButton">
+        <item name="android:background">@drawable/flat_gray_btn</item>
+        <item name="android:textColor">@color/text_white</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="FlatBlueButton">
+        <item name="android:background">@drawable/flat_blue_btn</item>
+        <item name="android:textColor">@color/text_white</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
 </resources>
