--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -894,16 +894,16 @@
         <item name="android:overlapAnchor">false</item>
     </style>
 
-    <style name="FlatGrayButton">
+    <style name="FlatButton">
+        <item name="android:textColor">@color/text_white</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="FlatButton.Gray">
         <item name="android:background">@drawable/flat_gray_btn</item>
-        <item name="android:textColor">@color/text_white</item>
-        <item name="android:textSize">18sp</item>
     </style>
 
-    <style name="FlatBlueButton">
+    <style name="FlatButton.Blue">
         <item name="android:background">@drawable/flat_blue_btn</item>
-        <item name="android:textColor">@color/text_white</item>
-        <item name="android:textSize">18sp</item>
     </style>
-
 </resources>
