--- a/src/main/res/layout/fragment_topface_account.xml
+++ b/src/main/res/layout/fragment_topface_account.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/main_background_color"
+    android:background="@color/bg_white"
     android:orientation="vertical">
 
     <ScrollView
@@ -45,28 +45,28 @@
             </RelativeLayout>
 
             <Button
+                style="@style/FlatButton.Blue"
                 android:id="@+id/btnChange"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="#33b5e5"
                 android:text="@string/change_password"
                 android:visibility="gone" />
 
             <Button
+                style="@style/FlatButton.Gray"
                 android:id="@+id/btnChangeEmail"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:background="#9e9e9e"
                 android:text="@string/change_email"
                 android:visibility="visible" />
 
             <Button
+                style="@style/FlatButton.Gray"
                 android:id="@+id/btnLogout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:background="#9e9e9e"
                 android:text="@string/settings_logout"
                 android:visibility="visible" />
 
@@ -79,19 +79,19 @@
                 android:visibility="gone" />
 
             <Button
+                style="@style/FlatButton.Gray"
                 android:id="@+id/btnCodeSend"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="#9e9e9e"
                 android:text="@string/settings_code_confirmation"
                 android:visibility="gone" />
 
             <Button
+                style="@style/FlatButton.Gray"
                 android:id="@+id/btnCodeWasSend"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:background="#9e9e9e"
                 android:text="@string/settings_email_was_confirmed"
                 android:visibility="gone" />
 
