--- a/src/main/res/layout/ac_leaders_layout.xml
+++ b/src/main/res/layout/ac_leaders_layout.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:id="@+id/leadersCont"
-                android:background="@color/bg_main">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:id="@+id/leadersCont">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -20,7 +19,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/leader_btn_bg_plate"
-                android:scaleType="fitXY"/>
+                android:scaleType="fitXY" />
 
             <Button
                 android:id="@+id/btnLeadersBuy"
@@ -29,7 +28,7 @@
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                style="@style/Widget.Topface.Button.Big.Blue"/>
+                style="@style/Widget.Topface.Button.Big.Blue" />
         </RelativeLayout>
 
         <LinearLayout
@@ -47,7 +46,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:textSize="14sp"
-                android:text="@string/choose_cool_photo"/>
+                android:text="@string/choose_cool_photo" />
 
             <GridView
                 android:id="@+id/useful_photos_grid"
@@ -63,7 +62,7 @@
                 android:numColumns="auto_fit"
                 android:stretchMode="columnWidth"
                 android:verticalSpacing="0px"
-                android:gravity="center"/>
+                android:gravity="center" />
 
             <TextView
                 android:id="@+id/useless_photos_title_text"
@@ -73,7 +72,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
             <GridView
                 android:id="@+id/useless_photos_grid"
@@ -89,13 +88,13 @@
                 android:numColumns="auto_fit"
                 android:stretchMode="columnWidth"
                 android:verticalSpacing="0px"
-                android:gravity="center"/>
+                android:gravity="center" />
         </LinearLayout>
     </RelativeLayout>
 
     <com.topface.topface.ui.views.LockerView
         android:id="@+id/llvLeaderSending"
         style="@style/LoadingLocker"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </RelativeLayout>
