--- a/src/main/res/layout/layout_popular_user_blocker.xml
+++ b/src/main/res/layout/layout_popular_user_blocker.xml
@@ -1,46 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center">
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-
-    <ScrollView
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true">
+        android:clickable="true"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/popular_user_lock_text"
+            style="@style/ItemTitleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="true"
+            android:layout_marginBottom="@dimen/popular_dialog_text_margin"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:drawablePadding="@dimen/popular_dialog_text_margin"
+            android:drawableTop="@drawable/icon_rocket"
             android:gravity="center"
-            android:orientation="vertical">
+            android:lineSpacingExtra="4sp"
+            android:paddingTop="@dimen/popular_dialog_text_margin"
+            android:textColor="@color/text_color_gray"
+            android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/popular_user_lock_text"
-                style="@style/ItemTitleText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/popular_dialog_text_margin"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:drawablePadding="@dimen/popular_dialog_text_margin"
-                android:drawableTop="@drawable/icon_rocket"
-                android:gravity="center"
-                android:lineSpacingExtra="4sp"
-                android:paddingTop="@dimen/popular_dialog_text_margin"
-                android:textColor="@color/text_color_gray"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/btnBuyVip"
-                style="@style/Widget.Topface.Button.Big.Blue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/popular_dialog_text_margin"
-                android:minWidth="179dp"
-                android:singleLine="true"
-                android:text="@string/buying_vip_status" />
-        </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+        <Button
+            android:id="@+id/btnBuyVip"
+            style="@style/Widget.Topface.Button.Big.Blue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/popular_dialog_text_margin"
+            android:minWidth="179dp"
+            android:singleLine="true"
+            android:text="@string/buying_vip_status" />
+    </LinearLayout>
+</ScrollView>
