--- a/src/main/res/layout/actionbar_container_title_view.xml
+++ b/src/main/res/layout/actionbar_container_title_view.xml
@@ -20,13 +20,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:padding="5dp"
+            android:paddingLeft="5dp"
             android:src="@drawable/ic_up_arrow_with_padding" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:gravity="center_vertical"
+            android:paddingLeft="5dp"
             android:orientation="vertical">
 
             <TextView
