--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -263,7 +263,7 @@
     </style>
 
     <style name="EditAvatar">
-        <item name="postProcessor">mask</item>
+        <item name="preProcessor">mask</item>
         <item name="clipMask">@drawable/edit_main_avatar_mask</item>
         <item name="android:background">@drawable/edit_main_avatar_background</item>
         <item name="android:layout_centerInParent">true</item>
@@ -272,7 +272,7 @@
     </style>
 
     <style name="FeedAvatar">
-        <item name="postProcessor">mask</item>
+        <item name="preProcessor">mask</item>
         <item name="clipMask">@drawable/feed_photo_mask</item>
         <item name="border">@drawable/feed_photo_border</item>
         <item name="android:layout_alignParentLeft">true</item>
@@ -309,7 +309,7 @@
     </style>
 
     <style name="ListAvatar">
-        <item name="postProcessor">roundCorners</item>
+        <item name="preProcessor">roundCorners</item>
         <item name="cornersRadius">@dimen/list_avatar_corners_radius</item>
         <item name="android:layout_alignParentLeft">true</item>
         <item name="android:layout_centerVertical">true</item>
@@ -395,7 +395,7 @@
     </style>
 
     <style name="NavigationBarAvatar">
-        <item name="postProcessor">mask</item>
+        <item name="preProcessor">mask</item>
         <item name="clipMask">@drawable/avatar_chat_mask</item>
         <item name="android:background">@drawable/avatar_chat_mask_selector</item>
         <item name="border">@drawable/feed_photo_border</item>
@@ -405,7 +405,7 @@
     </style>
 
     <style name="ChatAvatar" parent="NavigationBarAvatar">
-        <item name="postProcessor">mask</item>
+        <item name="preProcessor">mask</item>
         <item name="clipMask">@drawable/avatar_chat_mask</item>
         <item name="android:background">@drawable/avatar_chat_frame</item>
         <item name="android:layout_width">37dp</item>
@@ -431,7 +431,8 @@
     </style>
 
     <style name="Gift">
-        <item name="postProcessor">rounded</item>
+        <item name="postProcessor">none</item>
+        <item name="preProcessor">squared</item>
         <item name="android:layout_width">97dp</item>
         <item name="android:layout_height">99dp</item>
         <item name="android:paddingLeft">1dp</item>
@@ -443,6 +444,10 @@
         <item name="android:layout_marginBottom">3dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:gravity">center_horizontal</item>
+    </style>
+
+    <style name="AlbumGift" parent="Gift">
+        <item name="postProcessor">rounded</item>
     </style>
 
     <style name="Informer">
@@ -539,7 +544,7 @@
     </style>
 
     <style name="ProfileAvatar">
-        <item name="postProcessor">mask</item>
+        <item name="preProcessor">mask</item>
         <item name="clipMask">@drawable/photo_mask</item>
         <item name="border">@drawable/photo_border</item>
         <item name="android:layout_marginRight">6dp</item>
@@ -614,12 +619,17 @@
     </style>
 
     <style name="GalleryItem">
-        <item name="postProcessor">mask</item>
+        <item name="preProcessor">mask</item>
         <item name="clipMask">@drawable/photo_mask</item>
-        <item name="android:scaleType">centerInside</item>
         <item name="android:background">@drawable/photo_frame_selector</item>
         <item name="android:layout_width">110dp</item>
         <item name="android:layout_height">114dp</item>
+    </style>
+
+    <style name="UsersPhotoToLeaders">
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">fill_parent</item>
     </style>
 
     <style name="GalleryAddItem">
@@ -629,7 +639,7 @@
     </style>
 
     <style name="TopItem">
-        <item name="postProcessor">mask</item>
+        <item name="preProcessor">mask</item>
         <item name="clipMask">@drawable/frame_top_mask</item>
         <item name="android:background">@drawable/frame_top</item>
         <item name="android:paddingLeft">1dp</item>
@@ -739,6 +749,12 @@
     <style name="ButtonSale" parent="Widget.Topface.Button.Big.Blue">
         <item name="android:background">@drawable/btn_sale_selector</item>
         <item name="android:paddingRight">56dp</item>
+    </style>
+
+    <style name="ButtonAddLeader" parent="FlatButton.Blue">
+        <item name="android:layout_marginLeft">6dp</item>
+        <item name="android:layout_marginRight">6dp</item>
+        <item name="android:layout_marginTop">8dp</item>
     </style>
 
     <style name="Widget.Topface.RatingBar" parent="@android:style/Widget.RatingBar">
@@ -884,9 +900,37 @@
         </item>
     </style>
 
-    <style name="BanButton">
-        <item name="android:background">@drawable/ban_button_selector</item>
-        <item name="android:textColor">@color/text_white</item>
+    <style name="EditTextEnterLeaderText">
+        <item name="android:layout_marginLeft">6dp</item>
+        <item name="android:layout_marginRight">6dp</item>
+        <item name="android:layout_marginTop">36dp</item>
+        <item name="android:background">@drawable/add_leader_input</item>
+        <item name="android:hint">@string/add_leader_hint</item>
+        <item name="android:gravity">left</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:cacheColorHint">#8A8A8A</item>
+        <item name="android:shadowColor">#E6FFFFFF</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">1</item>
+        <item name="android:textColor">#030303</item>
     </style>
 
+    <style name="OverflowDropDownMenu" parent="Widget.AppCompat.PopupMenu.Overflow">
+        <item name="overlapAnchor">false</item>
+        <item name="android:overlapAnchor" tools:ignore="NewApi">false</item>
+    </style>
+
+    <style name="FlatButton">
+        <item name="android:textColor">@color/text_white</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="FlatButton.Gray">
+        <item name="android:background">@drawable/flat_gray_btn</item>
+    </style>
+
+    <style name="FlatButton.Blue">
+        <item name="android:background">@drawable/flat_blue_btn</item>
+    </style>
 </resources>
