--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -67,6 +67,6 @@
     <!--filter fragment dividers color-->
     <color name="filter_fragment_divider_color">#E2E2E2</color>
     <color name="profile_divider_color">#E5E5E5</color>
-
+    <color name="light_gray">#888888</color>
 
 </resources>
