#30350 подправил тему экрана бана, теперь все ок. Добавил обработку muliresponse теперь инфо о бане отображается сразу правильное.

--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -79,7 +79,7 @@
     </style>
 
     <style name="Theme.Topface.Ban">
-        <item name="android:background">@drawable/auth_bg</item>
+        <item name="android:windowBackground">@color/bg_white</item>
     </style>
 
     <style name="Theme.Topface.RestoreAccountActivity" parent="Theme.Topface">
