--- a/src/main/res/layout/item_user_gallery_add_btn.xml
+++ b/src/main/res/layout/item_user_gallery_add_btn.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
     <ImageView
         android:id="@+id/ivPhoto"
         style="@style/GalleryAddItem"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="14dp" />
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
