--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -544,8 +544,6 @@
     </style>
 
     <style name="ProfileAvatar">
-        <item name="preProcessor">mask</item>
-        <item name="clipMask">@drawable/photo_mask</item>
         <item name="border">@drawable/photo_border</item>
         <item name="android:layout_marginRight">6dp</item>
         <item name="android:layout_marginLeft">6dp</item>
@@ -619,11 +617,9 @@
     </style>
 
     <style name="GalleryItem">
-        <item name="preProcessor">mask</item>
-        <item name="clipMask">@drawable/photo_mask</item>
-        <item name="android:background">@drawable/photo_frame_selector</item>
-        <item name="android:layout_width">110dp</item>
-        <item name="android:layout_height">114dp</item>
+        <item name="postProcessor">cropped</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">fill_parent</item>
     </style>
 
     <style name="UsersPhotoToLeaders">
@@ -634,8 +630,8 @@
 
     <style name="GalleryAddItem">
         <item name="android:src">@drawable/profile_add_photo_selector</item>
-        <item name="android:layout_width">110dp</item>
-        <item name="android:layout_height">114dp</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">fill_parent</item>
     </style>
 
     <style name="TopItem">
